deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qmd
  namespace: cicadia-system
  labels:
    app.kubernetes.io/name: qmd
spec:
  type: NodePort
  ports:
    - port: 8181
      targetPort: 8181
      nodePort: 32181
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: qmd
